Fixed problem with overflow

--- a/media/2012/css/theme.css
+++ b/media/2012/css/theme.css
@@ -105,7 +105,7 @@ header {
             display: none;
             background: #fff;
             overflow: hidden;
-            overflow-y: scroll;
+            /*overflow-y: scroll;*/
             text-align: justify;
         }
         .content .full-quarter {
